# statflow

./: .gitignore  README.md  plan_11.md  plan_12.md  plan_2.md  plan_3.md  plan_4.md  plan_6.md  plan_7.md  plan_9.md  pyproject.toml  raw_plan.md
.github/instructions/: AGENTS.md  web_app_guidance.instructions.md
.github/plans/: plan.md  plan_10.md  plan_12.md  plan_5.md  plan_8.md
src/statflow/: Home.py  README.md  __init__.py  config.py
src/statflow/components/: __init__.py  downloads.py  filters.py  graphs.py  tables.py
src/statflow/pages/: 1_🔧_Parameters.py  1_🔬_Single_Dataset.py  2_📊_Metrics.py  2_📋_Multiple_Datasets.py  3_💾_Export.py  3_🔬_Single_Dataset.py  4_📋_Multiple_Datasets.py  5_💾_Export.py  5_📊_Plot_Macros.py  6_⚙️_Settings.py  7_📊_Plot_Macros.py
src/statflow/pages_modules/: __init__.py
src/statflow/pages_modules/general/: __init__.py
src/statflow/pages_modules/module_1_Parameters/: __init__.py  processor.py
src/statflow/pages_modules/module_2_Metrics/: __init__.py  processor.py
src/statflow/pages_modules/module_3_Single_Dataset/: __init__.py  processor.py
src/statflow/pages_modules/module_4_Multiple_Datasets/: __init__.py  processor.py
src/statflow/pages_modules/module_5_Export/: __init__.py  processor.py
src/statflow/pages_modules/module_6_Settings/: __init__.py  processor.py
src/statflow/pages_modules/module_7_Plot_Macros/: __init__.py  processor.py
src/statflow/utils/: __init__.py  data_processing.py  export.py  mlflow_client.py  styling.py  table_builders.py  table_utils.py  visualization.py
(+5 files in other folders)
