[project]
name = "statflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "frederico santos", email = "fredericobsantos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.0",
    "streamlit-sortables>=0.3.1",
    "sympy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
